# ppgti-3007-computer-view

./: classificacao_car_or_truck.ipynb  pyproject.toml
